--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vaccination Dashboard</title>
+  <title>Vaccination </title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -52,7 +52,9 @@
       transition: color 0.3s ease;
     }
     nav ul li a:hover {
-      color: #ffcc00;
+      text-decoration:underline;
+      text-decoration-color: #d0e2f8;
+      color: #f9d383;
     }
 .section 
 { 
@@ -128,7 +130,7 @@ body.view-all .section
       padding: 25px;
     }
     footer a {
-      color: #ffcc00;
+      color: #f9d383;
       text-decoration: none;
     }
     footer a:hover {
