--- a/index.html
+++ b/index.html
@@ -136,6 +136,85 @@ body.view-all .section
     footer a:hover {
       text-decoration: underline;
     }
+    /* 📱 Responsive Enhancements — Keep Original Style Safe */
+
+/* Smaller tablets and phones */
+@media (max-width: 768px) {
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px 15px;
+  }
+
+  nav h1 {
+    font-size: 1.3rem;
+    margin-bottom: 10px;
+  }
+
+  nav ul {
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+  }
+
+  nav ul li a {
+    padding: 10px 0;
+    font-size: 1rem;
+  }
+
+  .section {
+    padding: 3rem 1rem;
+  }
+
+  .section h2 {
+    font-size: 1.6rem;
+  }
+
+  .section p,
+  .section ul {
+    font-size: 1rem;
+  }
+
+  .card-container {
+    grid-template-columns: 1fr;
+  }
+
+  .search-bar {
+    width: 90%;
+    font-size: 1rem;
+    padding: 0.75rem;
+  }
+
+  button {
+    width: 90%;
+    max-width: 300px;
+    font-size: 1rem;
+    padding: 0.75rem;
+    margin: 10px auto;
+    display: block;
+  }
+}
+
+/* Ultra-small devices */
+@media (max-width: 480px) {
+  nav h1 {
+    font-size: 1.1rem;
+  }
+
+  .section {
+    padding: 2rem 0.5rem;
+  }
+
+  .search-bar {
+    font-size: 0.95rem;
+  }
+
+  button {
+    font-size: 0.95rem;
+    padding: 0.6rem;
+  }
+}
+
   </style>
 </head>
 <body>
